--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
 osx_image: xcode7.2
+xcode_sdk: iphonesimulator9.2
 xcode_project: PasteIt.xcodeproj
-xcode_scheme: PasteItTests
+xcode_scheme: PasteIt
