--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_sdk: iphonesimulator9.2
-xcode_project: PasteIt.xcodeproj
-xcode_scheme: PasteIt
+script: xcodebuild -workspace PasteIt.xcodeproj -scheme PasteIt -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO
