--- a/PasteIt.xcodeproj/xcshareddata/xcschemes/PasteItTests.xcscheme
+++ b/PasteIt.xcodeproj/xcshareddata/xcschemes/PasteItTests.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B93E6FFB1C22426F00700E31"
-               BuildableName = "PasteIt.app"
+               BuildableName = "Paste Now.app"
                BlueprintName = "PasteIt"
                ReferencedContainer = "container:PasteIt.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B93E6FFB1C22426F00700E31"
-            BuildableName = "PasteIt.app"
+            BuildableName = "Paste Now.app"
             BlueprintName = "PasteIt"
             ReferencedContainer = "container:PasteIt.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B93E6FFB1C22426F00700E31"
-            BuildableName = "PasteIt.app"
+            BuildableName = "Paste Now.app"
             BlueprintName = "PasteIt"
             ReferencedContainer = "container:PasteIt.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B93E6FFB1C22426F00700E31"
-            BuildableName = "PasteIt.app"
+            BuildableName = "Paste Now.app"
             BlueprintName = "PasteIt"
             ReferencedContainer = "container:PasteIt.xcodeproj">
          </BuildableReference>
